--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,8 @@ PORT=3000
 # Https 
 SSL_KEY_PATH=./cert/key.pem
 SSL_CERT_PATH=./cert/cert.pem
+
+# Databricks setup
+WORKSPACE_URL=""
+PAT_TOKEN=""
+WAREHOUSE_ID=""
