add support for monthly data queries

--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,6 @@ NODE_ENV=development
 PORT=3000
 
 # Databricks setup
-WORKSPACE_URL=""
 PAT_TOKEN=""
-WAREHOUSE_ID=""
+DATABRICKS_HOST=""
+DATABRICKS_HTTP_PATH=""
