--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "zod": "^3.25.67"
   },
