--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "knex": "^3.1.0",
     "morgan": "^1.10.0",
+    "sql-template-strings": "^2.2.2",
     "zod": "^3.25.67"
   },
   "devDependencies": {
